--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -44,3 +44,166 @@
 
 @media (max-width: 767px) {
 }
+
+.featured-container {
+  background-color: #f0f4ff;
+  padding: 20px;
+  border-radius: 12px;
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.featured-button {
+  background-color: #3162f6;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.featured-tabs {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.featured-tab {
+  background-color: white;
+  color: #666;
+  border: 1px solid #ddd;
+  border-radius: 20px;
+  padding: 5px 15px;
+  cursor: pointer;
+}
+
+.featured-tab.active {
+  background-color: #333;
+  color: white;
+}
+
+.featured-cards {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.featured-card {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 250px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.featured-card img {
+  width: 100%;
+  height: auto;
+}
+
+.card-content {
+  padding: 10px;
+}
+
+.card-title {
+  font-size: 12px;
+  color: #888;
+  margin-bottom: 5px;
+}
+
+.card-title,
+h3 {
+  margin: 0;
+}
+
+h3 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.new-section-container {
+  padding: 20px;
+  background-color: white;
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.new-section-container h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.new-section-container p {
+  color: #666;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.course-cards {
+  gap: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.course-card {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-info {
+  padding: 10px;
+}
+.course-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+.card-info .provider {
+  font-size: 14px;
+  color: #888;
+  margin-bottom: 5px;
+}
+
+.card-info h3 {
+  font-size: 18px;
+  margin: 0;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.card-info p {
+  font-size: 14px;
+  color: #666;
+  margin: 0;
+}
+
+.button-container {
+  display: flex;
+  gap: 10px;
+}
+
+.view-all {
+  background-color: transparent;
+  color: #3162f6;
+  border: 1px solid #3162f6;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 14px;
+  border-radius: 6px;
+}
