--- a/static/general.css
+++ b/static/general.css
@@ -49,8 +49,9 @@ body {
   padding: 10px;
   border: 1px solid black;
 }
+*/
 
-#course-image {
+#card-image {
   height: 150px;
   width: 200px;
 }
@@ -65,4 +66,4 @@ body {
   height: 50px;
   width: 50px;
   border-radius: 50%;
-} */
+} 
