--- a/templates/instructor_profile.html
+++ b/templates/instructor_profile.html
@@ -57,7 +57,7 @@
     <main>
         <h1>{{instructor.name}}</h1>
         <!-- image -->
-        <img id="profile-image" class="profile-image" src="{{instructor.image}}" alt="instructor profile picture">
+        <img id="card-image" class="card-image" src="{{instructor.image}}" alt="instructor profile picture">
 
         <!-- about -->
         <div id="instructor-about">
