--- a/static/styles/header.css
+++ b/static/styles/header.css
@@ -1,3 +1,6 @@
+body {
+  font-family: sans-serif;
+}
 #header {
   top: 0;
   left: 0;
@@ -17,7 +20,7 @@
   background-color: white;
 }
 .header-scroll {
-  background-color: #999897;
+  background-color: #9dc08b;
 }
 .header-scroll #nav-bar a {
   color: white;
@@ -38,7 +41,7 @@
 
 #nav-bar a,
 .dropdown-button {
-  font-size: 19px;
+  font-size: 18px;
   font-weight: 600;
   padding-left: 10px;
   padding-right: 10px;
@@ -109,7 +112,6 @@
 #hidden-vertical-navbar .dropdown-button {
   font-weight: inherit;
   background-color: transparent;
-  font-family: "Times New Roman", Times, serif;
   text-decoration: underline;
   padding: 10px;
 }
