--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -1,13 +1,3 @@
-#iframe-header {
-  top: 0px;
-  width: 100%;
-  height: 100px;
-  display: flex;
-  position: fixed;
-  z-index: 100;
-  border: none;
-}
-
 #banner {
   background-size: cover;
   width: 100%;
@@ -28,10 +18,7 @@
   font-size: 7vw;
   z-index: -1;
 }
-#iframe-footer {
-  border: none;
-  width: 100%;
-}
+
 @media (max-width: 1199px) {
   #image-container {
     top: 3%;
@@ -46,7 +33,7 @@
 }
 
 .featured-container {
-  background-color: #f0f4ff;
+  background-color: #edf1d6;
   padding: 20px;
   border-radius: 12px;
   width: 100%;
@@ -56,7 +43,7 @@
 }
 
 .featured-button {
-  background-color: #3162f6;
+  background-color: #609966;
   color: white;
   border: none;
   border-radius: 6px;
@@ -200,8 +187,8 @@ h3 {
 
 .view-all {
   background-color: transparent;
-  color: #3162f6;
-  border: 1px solid #3162f6;
+  color: #609966;
+  border: 1px solid #609966;
   padding: 10px 20px;
   cursor: pointer;
   font-size: 14px;
