--- a/static/styles/account.css
+++ b/static/styles/account.css
@@ -1,23 +1,34 @@
-#container {
+#main-container {
   display: flex;
   flex-direction: row;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  align-items: center;
+  overflow: hidden;
 }
 #left-container {
-  width: 60%;
+  max-width: 70vw;
+}
+#left-container img {
+  height: 100vh;
+  background-size: cover;
+  object-fit: cover;
+  object-position: left;
 }
 #right-container {
-  width: 40%;
+  flex: 1;
 }
 #account-page {
+  width: 400px;
   background-color: white;
   padding: 30px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  box-shadow: 0 4px 8px rgba(0.5, 0.5, 0.5, 0.5);
 }
 
-/* Form Styles */
 #account-page h1 {
+  text-align: center;
   font-size: 24px;
   margin-bottom: 20px;
 }
@@ -37,8 +48,6 @@
   border: 1px solid #ccc;
   border-radius: 5px;
 }
-
-/* Button Style */
 #account-page button[type="submit"] {
   background-color: #28a745;
   color: white;
@@ -54,18 +63,6 @@
   background-color: #218838;
 }
 
-/* Links */
-#account-page a {
-  color: #007bff;
-  text-decoration: none;
-  font-size: 14px;
-}
-
-#account-page a:hover {
-  text-decoration: underline;
-}
-
-/* Additional Margin for Inputs */
 #username,
 #password {
   margin-bottom: 10px;
@@ -76,4 +73,53 @@
   display: flex;
   justify-content: space-between;
   margin-top: 5px;
+}
+@media (max-width: 1199px) {
+  #main-container {
+    flex-direction: column;
+  }
+
+  #left-container {
+    display: none;
+  }
+
+  #right-container {
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #account-page {
+    width: 100%;
+    height: 100vh;
+    border-radius: 0;
+    box-shadow: none;
+    padding: 20px;
+  }
+}
+
+#text-overlay {
+  position: absolute;
+  top: 45%;
+  left: 28%;
+}
+#text-overlay h1 {
+  font-size: 3.5vw;
+  margin: 0;
+  padding: 0;
+  line-height: 1.2;
+  font-weight: bold;
+  color: #2b2b3d;
+}
+#text-overlay p {
+  text-align: center;
+  font-size: 1.5vw;
+  margin: 10px 0;
+  color: #555;
+}
+
+#right-container p {
+  text-align: center;
+  font-size: 12px;
 }
