Styling sign up

--- a/static/styles/register_account.css
+++ b/static/styles/register_account.css
@@ -1,14 +1,11 @@
-#main-container {
-  display: flex;
-  flex-direction: row;
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+body {
+  padding-top: 70px;
 }
-
+#register-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 #image-container img {
   position: relative;
   height: 100vh;
@@ -16,40 +13,59 @@
   object-fit: cover;
   object-position: left;
 }
+#main-container {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  align-items: center;
+  overflow: hidden;
+}
 
-#account-page {
+.input-box {
+  width: 300px;
+}
+form {
   position: absolute;
+  width: 600px;
   right: 0;
   margin: 0 150px 100px 0;
-  padding: 40px;
-  width: 400px;
   background-color: white;
+
+  padding: 10px 0;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0.5, 0.5, 0.5, 0.5);
 }
-
-#account-page h1 {
+form h1 {
   text-align: center;
-  font-size: 24px;
-  margin-bottom: 20px;
+  font-size: 30px;
+}
+form div {
+  margin-bottom: 15px;
 }
 
-#account-page form {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-bottom: 20px;
+form label {
+  font-size: 14px;
+  font-weight: bold;
+  color: #333;
 }
 
-.username-input,
-.password-input {
+form input[type="text"],
+form input[type="email"],
+form input[type="tel"],
+form input[type="password"],
+form input[type="number"],
+form select {
   width: 100%;
   padding: 10px;
   margin-top: 5px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  font-size: 14px;
 }
-#account-page button[type="submit"] {
+
+form button[type="submit"] {
   background-color: #28a745;
   color: white;
   padding: 10px;
@@ -58,15 +74,23 @@
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s;
+  width: 100%;
 }
 
-#account-page button[type="submit"]:hover {
+form button[type="submit"]:hover {
   background-color: #218838;
 }
 
-#username,
-#password {
-  margin-bottom: 10px;
+form input[type="radio"],
+form input[type="checkbox"] {
+  margin-right: 5px;
+}
+
+form .account-type-div p {
+  font-size: 14px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 5px;
 }
 
 #button-container {
@@ -101,23 +125,16 @@
   font-size: 12px;
 }
 
-#disclaimer-text {
-  text-align: center;
-}
-
 @media (max-width: 1199px) {
   #main-container {
     flex-direction: column;
   }
 
-  #account-page {
+  form {
     width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
-    border-radius: 0;
-    box-shadow: none;
-    padding: 20px;
     margin: 0px;
     background-color: #edf1d6;
   }
