--- a/templates/header.html
+++ b/templates/header.html
@@ -29,7 +29,7 @@
     </header>
     <nav id="mobile-vertical-navbar">
       <img
-        src="../vertical_menu_button.png"
+        src="/static/img/vertical_menu_button.png"
         id="vertical-menu-button"
         onclick="showVerticalNavbar()"
       />
