--- a/static/general.css
+++ b/static/general.css
@@ -7,6 +7,7 @@ body {
 }
 #iframe-header {
   top: 0px;
+  right: 0px;
   width: 100%;
   height: 100px;
   display: flex;
@@ -20,7 +21,6 @@ body {
   width: 100%;
 }
 
-#register-form,
 #forgot-password,
 #reset-link,
 #course-detail {
@@ -28,12 +28,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-#register-form div {
-  display: flex;
-  flex-direction: column;
-  width: 30%;
 }
 
 .flashed-msg {
