--- a/templates/register_account.html
+++ b/templates/register_account.html
@@ -8,119 +8,164 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="/static/general.css" />
-    <link rel="stylesheet" href="/static/styles/home.css" />
-    <link rel="stylesheet" href="/static/styles/header.css"/>
+    <link rel="stylesheet" href="/static/styles/register_account.css" />
     <title>Register Account</title>
   </head>
-  <body style="height: 10000px">
+  <body>
     <div id="body-container">
       <iframe src="/header" id="iframe-header"></iframe>
-    </div>
+      <div id="main-container">
+        <div id="image-container">
+          <img src="/static/img/AccountBackground.png" />
+          <div id="text-overlay">
+            <h1>Join and learn with us</h1>
+            <p>Log in to get started!</p>
+          </div>
+        </div>
 
-    <form action="/register" method="POST" id="register-form" enctype="multipart/form-data">
-      <!-- email -->
-      <div>
-       <label for="email">Email Address*</label>
-       <input type="email" name="email" id="email" required />
-      </div>
-      <!-- phone -->
-      <div>
-        <label for="phone">Phone Number*</label>
-        <input type="tel" name="phone" id="phone" minlength="8" maxlength="10" required/>
-      </div>
-      <!-- password -->
-      <div>
-        <label for="password">Password*</label>
-        <input type="password" name="password" id="password" required />
-      </div>
-      <!-- retype password -->
-      <div>
-        <label for="retype-password">Retype Password*</label>
-        <input type="password" name="retype-password" id="retype-password" required />
-      </div>
-      <!-- profile picture -->
-      <div>
-        <label for="profile-picture">Profile Picture</label>
-        <input type="file" name="profile-picture" id="profile-picture" />
-      </div>
-      <!-- first name -->
-      <div>
-        <label for="first-name">First Name*</label>
-        <input type="text" name="first-name" id="first-name" required />
-      </div>
-      <!-- last name -->
-      <div>
-        <label for="last-name">Last Name*</label>
-        <input type="text" name="last-name" id="last-name" required />
-      </div>
-      <!-- address -->
-      <div>
-        <label for="address">Address*</label>
-        <input type="text" name="address" id="address" required />
-      </div>
-      <!-- city -->
-      <div>
-        <label for="city">City*</label>
-        <input type="text" name="city" id="city" required />
-      </div>
-      <!-- zipcode -->
-      <div>
-        <label for="zipcode">Zipcode*</label>
-         <input type="number" name="zipcode" id="zipcode" minlength="4" maxlength="6" required>
-      </div>
-      <!-- TODO: country dropdown from csv MISSING!!! -->
-      <div>
-        <label for="country">Country*</label>
-        <select name="country" id="country" required>
-          <option value="" disabled selected>Select Country</option>
-          {% for country in countries %}
-          <option value="{{ country.code }}">{{ country.name }}</option>
-          {% endfor %}
-        </select>
-      </div>
-      <!-- accont type -->
-      <div class="account-type-div">
-        <p>Account Type*</p>
-        <input type="radio" name="account-type" value="instructor" id="instructor" required />
-        <label for="instructor">Instructor</label>
-        <input type="radio" name="account-type" value="learner" id="learner" required />
-        <label for="learner">Learner</label>
-      </div>
-      <!-- display only if instructor is selected -->
-      <div id="instructor-fields" style="display: none">
-        <!-- school name -->
-        <label for="school-name">School Name*</label>
-        <input type="text" name="school-name" id="school-name" />
+        <form
+          action="/register"
+          method="POST"
+          id="register-form"
+          enctype="multipart/form-data"
+        >
+          <h1>Sign Up</h1>
+          <p>Already sign up? <a href="/account">Sign In Now</a></p>
 
-        <!-- job title -->
-        <label for="job-title">Job Title*</label>
-        <input type="text" name="job-title" id="job-title" />
+          <!-- email -->
+          <div class="input-box">
+            <label for="email">Email Address*</label>
+            <input type="email" name="email" id="email" required />
+          </div>
+          <!-- phone -->
+          <div class="input-box">
+            <label for="phone">Phone Number*</label>
+            <input
+              type="tel"
+              name="phone"
+              id="phone"
+              minlength="8"
+              maxlength="10"
+              required
+            />
+          </div>
+          <!-- password -->
+          <div class="input-box">
+            <label for="password">Password*</label>
+            <input type="password" name="password" id="password" required />
+          </div>
+          <!-- retype password -->
+          <div class="input-box">
+            <label for="retype-password">Retype Password*</label>
+            <input
+              type="password"
+              name="retype-password"
+              id="retype-password"
+              required
+            />
+          </div>
+          <!-- profile picture -->
+          <div class="input-box">
+            <label for="profile-picture">Profile Picture</label>
+            <input type="file" name="profile-picture" id="profile-picture" />
+          </div>
+          <!-- first name -->
+          <div class="input-box">
+            <label for="first-name">First Name*</label>
+            <input type="text" name="first-name" id="first-name" required />
+          </div>
+          <!-- last name -->
+          <div class="input-box">
+            <label for="last-name">Last Name*</label>
+            <input type="text" name="last-name" id="last-name" required />
+          </div>
+          <!-- address -->
+          <div class="input-box">
+            <label for="address">Address*</label>
+            <input type="text" name="address" id="address" required />
+          </div>
+          <!-- city -->
+          <div class="input-box">
+            <label for="city">City*</label>
+            <input type="text" name="city" id="city" required />
+          </div>
+          <!-- zipcode -->
+          <div class="input-box">
+            <label for="zipcode">Zipcode*</label>
+            <input
+              type="number"
+              name="zipcode"
+              id="zipcode"
+              minlength="4"
+              maxlength="6"
+              required
+            />
+          </div>
+          <!-- TODO: country dropdown from csv MISSING!!! -->
+          <div class="input-box">
+            <label for="country">Country*</label>
+            <select name="country" id="country" required>
+              <option value="" disabled selected>Select Country</option>
+              {% for country in countries %}
+              <option value="{{ country.code }}">{{ country.name }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <!-- accont type -->
+          <div class="account-type-div input-box">
+            <p>Account Type*</p>
+            <input
+              type="radio"
+              name="account-type"
+              value="instructor"
+              id="instructor"
+              required
+            />
+            <label for="instructor">Instructor</label>
+            <input
+              type="radio"
+              name="account-type"
+              value="learner"
+              id="learner"
+              required
+            />
+            <label for="learner">Learner</label>
+          </div>
+          <!-- display only if instructor is selected -->
+          <div id="instructor-fields" class="input-box" style="display: none">
+            <!-- school name -->
+            <label for="school-name">School Name*</label>
+            <input type="text" name="school-name" id="school-name" />
 
-        <!-- specialization -->
-        <label for="specialization">Specialization*</label>
-        <input type="checkbox" id="s1" name="s1" value="History">
-        <label for="s1">History</label>
-        <input type="checkbox" id="s2" name="s2" value="Math">
-        <label for="s2">Math</label>
-        <input type="checkbox" id="s3" name="s3" value="Science">
-        <label for="s3">Science</label>
-        <input type="checkbox" id="s4" name="s4" value="Art">
-        <label for="s4">Art</label>
-        <input type="checkbox" id="s5" name="s5" value="Music">
-        <label for="s5">Music</label>
-      </div>
-      <!-- submit button -->
-      <div>
-        <button type="submit">Register</button>
-      </div>
-    </form>
+            <!-- job title -->
+            <label for="job-title">Job Title*</label>
+            <input type="text" name="job-title" id="job-title" />
 
-    <!-- get flashed mesage -->
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
+            <!-- specialization -->
+            <label for="specialization">Specialization*</label>
+            <input type="checkbox" id="s1" name="s1" value="History" />
+            <label for="s1">History</label>
+            <input type="checkbox" id="s2" name="s2" value="Math" />
+            <label for="s2">Math</label>
+            <input type="checkbox" id="s3" name="s3" value="Science" />
+            <label for="s3">Science</label>
+            <input type="checkbox" id="s4" name="s4" value="Art" />
+            <label for="s4">Art</label>
+            <input type="checkbox" id="s5" name="s5" value="Music" />
+            <label for="s5">Music</label>
+          </div>
+          <!-- submit button -->
+          <div>
+            <button type="submit">Register</button>
+          </div>
+        </form>
+
+        <!-- get flashed mesage -->
+        {% with messages = get_flashed_messages() %} {% if messages %}
         <p class="flashed-msg">{{ messages[-1]}}</p>
-        {% endif %}
-    {% endwith %}
+        {% endif %} {% endwith %}
+      </div>
+    </div>
 
     <iframe src="/footer" id="iframe-footer"></iframe>
     <script src="/static/general.js"></script>
