--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,7 +12,7 @@
         <p>&copy; 2024 Your Company. All rights reserved.</p>
         <nav class="footer-nav">
           <a href="/privacy" target="_parent">Privacy Policy</a>
-          <a href="terms.html" target="_parent">Terms of Service</a>
+          <a href="/terms" target="_parent">Terms of Service</a>
           <a href="contact.html" target="_parent">Contact Us</a>
         </nav>
       </div>
